Bring webroot back.

--- a/cmd/hockeypuck/index.html.tmpl
+++ b/cmd/hockeypuck/index.html.tmpl
@@ -3,6 +3,7 @@
 <head>
 <title>Search results for '{{ .Query.Search | html }}'</title>
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<link href='/assets/css/pks.min.css' rel='stylesheet' type='text/css'>
 <style type="text/css">
 /*<![CDATA[*/
  .uid { color: green; text-decoration: underline; }
