--- a/cmd/hockeypuck/index.html.tmpl
+++ b/cmd/hockeypuck/index.html.tmpl
@@ -11,8 +11,9 @@
 /*]]>*/
 </style></head><body><h1>Search results for '{{ .Query.Search | html }}'</h1><pre>Type bits/keyID            cr. time   exp time   key expir
 </pre>
+{{ $fp := .Query.Fingerprint }}
 {{ $spacer := "____________________" }}
-{{ range $key := .Keys }}<hr /><pre><strong>pub</strong> <a href="/pks/lookup?op=get&search=0x{{ $key.LongKeyID }}">{{ $key.Fingerprint }}</a> {{ $key.Creation }}
+{{ range $key := .Keys }}<hr /><pre><strong>pub</strong> <a href="/pks/lookup?op=get&search=0x{{ $key.Fingerprint }}">{{ $key.Algorithm.Name }}{{ $key.BitLength }}/{{ if $fp }}{{ $key.Fingerprint }}{{ else }}{{ $key.LongKeyID }}{{ end }}</a> {{ $key.Creation }}
 	 Hash=<a href="/pks/lookup?op=hget&search={{ $key.MD5 }}">{{ $key.MD5 }}</a>
 
 {{ range $uid := $key.UserIDs }}<strong>uid</strong> <span class="uid">{{ $uid.Keywords | html }}</span>
@@ -23,7 +24,7 @@
 {{ range $sig := $uat.Signatures }}sig {{ if $sig.Revocation }}<span class="warn">revok </span>{{ else }} sig  {{ end }}<a href="/pks/lookup?op=get&search=0x{{ $sig.IssuerKeyID }}">{{ $sig.IssuerKeyID }}</a> {{ $sig.Creation }} {{ if $sig.Expiration }}{{ $sig.Expiration }}{{ else }}{{ $spacer }}{{ end }} {{ $spacer }} <a href="/pks/lookup?op=vindex&search=0x{{ $sig.IssuerKeyID }}">{{ if eq $sig.IssuerKeyID $key.LongKeyID }}[selfsig]{{ else }}{{ $sig.IssuerKeyID }}{{ end }}</a>
 {{ end }}
 {{ end }}
-{{ range $sub := $key.SubKeys }}<strong>sub</strong> {{ $sub.Fingerprint }} {{ $sub.Creation }}            
+{{ range $sub := $key.SubKeys }}<strong>sub</strong> {{ $sub.Algorithm.Name }}{{ $sub.BitLength }}/{{ if $fp }}{{ $sub.Fingerprint }}{{ else }}{{ $sub.LongKeyID }}{{ end }} {{ $sub.Creation }}            
 {{ range $sig := $sub.Signatures }}sig {{ if $sig.Revocation }}<span class="warn">revok </span>{{ else }}sbind{{ end }} <a href="/pks/lookup?op=get&search=0x{{ $key.LongKeyID }}">{{ $key.LongKeyID }}</a> {{ $sig.Creation }} {{ $spacer }} {{ if $sig.Expiration }}{{ $sig.Expiration }}{{ else }}{{ $spacer }}{{ end }} <a href="/pks/lookup?op=vindex&search=0x"{{ $key.LongKeyID }}>[]</a>
 {{ end }}
 {{ end }}
