--- a/cmd/hockeypuck/stats.html.tmpl
+++ b/cmd/hockeypuck/stats.html.tmpl
@@ -13,6 +13,7 @@ Taken at {{ .Now }}
 <h2>Settings</h2>
 <table>
 <tr><th>Version</th><td>{{ .Version }} </td></tr>
+{{ if .Contact }}<tr><th>Server Contact</th><td>{{ .Contact }} </td></tr>{{ end }}
 <tr><th>HTTP</th><td>{{ .HTTPAddr }} </td></tr>
 <tr><th>Recon</th><td>{{ .ReconAddr }} </td></tr>
 </table>
