--- a/cmd/hockeypuck/stats.html.tmpl
+++ b/cmd/hockeypuck/stats.html.tmpl
@@ -12,8 +12,10 @@ table, th, td {
 Taken at {{ .Now }}
 <h2>Settings</h2>
 <table>
+<tr><th>Hostname</th><td>{{ .Hostname }} </td></tr>
+<tr><th>Nodename</th><td>{{ .Nodename }} </td></tr>
 <tr><th>Version</th><td>{{ .Version }} </td></tr>
-{{ if .Contact }}<tr><th>Server Contact</th><td>{{ .Contact }} </td></tr>{{ end }}
+<tr><th>Server Contact</th><td>{{ .Contact }} </td></tr>
 <tr><th>HTTP</th><td>{{ .HTTPAddr }} </td></tr>
 <tr><th>Recon</th><td>{{ .ReconAddr }} </td></tr>
 </table>
